<?xml version="1.0"?>
<package format="3">
  <name>ddsm_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ponqoo@outlook.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 必ずdependは一回だけ書くこと！ -->
  <!-- 冗長だとrosdepでこける -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- Boost is linked via CMake; rosdep entry not required here -->

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_driver</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
